# flip-fluid-simulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json  flip.data  flip.js  flip.wasm  index.html
.github/workflows/: cmake.yml
shaders/: point.vs
shaders/desktop/: point.fs
shaders/web/: point.fs  point.vs
src/: FlipFluid.cpp  FlipFluid.h  main.cpp
